--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,13 @@ services:
     ports:
       - "3000:3000"
     volumes:
+      - .:/app
+      - /app/node_modules
+      - /app/.next
       - ./data:/app/data
+    environment:
+      - WATCHPACK_POLLING=true
+      - NODE_ENV=development
     env_file:
       - .env
+    command: npm run dev
