--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "groq-sdk": "^0.9.0",
         "next": "15.1.0",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
-    },
-    "devDependencies": {
+        "react-dom": "^19.0.0",
+        "react-markdown": "^10.1.0",
+        "react-syntax-highlighter": "^16.1.0"
     }
 }
