--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "firebase": "^11.2.0",
         "groq-sdk": "^0.9.0",
+        "html2pdf.js": "^0.14.0",
         "next": "15.1.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
