--- a/.github/workflows/huggingface.yml
+++ b/.github/workflows/huggingface.yml
@@ -19,4 +19,4 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           HF_SPACE_NAME: ${{ secrets.HF_SPACE_NAME }} 
         run: |
-          git push https://user:$HF_TOKEN@huggingface.co/spaces/$HF_SPACE_NAME main
+          git push --force https://user:$HF_TOKEN@huggingface.co/spaces/$HF_SPACE_NAME main
