*FIX* Migration complète de Firebase vers Supabase

--- a/package.json
+++ b/package.json
@@ -1,22 +1,1 @@
-{
-    "name": "chat-app-piscine",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "firebase": "^11.2.0",
-        "firebase-admin": "^13.6.1",
-        "groq-sdk": "^0.9.0",
-        "html2pdf.js": "^0.14.0",
-        "next": "15.1.0",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-markdown": "^10.1.0",
-        "react-syntax-highlighter": "^16.1.0"
-    }
-}
+{"name":"chat-app-piscine","version":"0.1.0","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start","lint":"next lint"},"dependencies":{"@supabase/supabase-js":"^2.45.0","groq-sdk":"^0.9.0","html2pdf.js":"^0.14.0","next":"15.1.0","react":"^19.0.0","react-dom":"^19.0.0","react-markdown":"^10.1.0","react-syntax-highlighter":"^16.1.0"}}
