--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,4 @@ services:
       - NODE_ENV=development
     env_file:
       - .env
-    command: npm run dev
+    command: sh -c "npm install && npm run dev"
